--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -5,10 +5,13 @@ permalink: /projects/
 author_profile: true
 ---
 
+IITB
+
 {% include base_path %}
 
 
 {% for post in site.projects %}
+  hello
   {% include archive-single.html %}
 {% endfor %}
 
